--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
@@ -43,13 +43,13 @@
                                 <td>@item.SoDienThoai</td>
                                 <td>@item.CoQuanLamViec</td>
                                 <td>
-                                    <a href="@Url.Action("Details", new { id = item.NguoiDungId })" class="btn btn-info btn-sm">
+                                    <a href="@Url.Action("Details", new { id = item.NguoiDungId })" class="btn btn-info btn-sm m-2 ">
                                         <i class="fas fa-eye"></i> Xem
                                     </a>
-                                    <a href="@Url.Action("Edit", new { id = item.NguoiDungId })" class="btn btn-warning btn-sm mx-2">
+                                    <a href="@Url.Action("Edit", new { id = item.NguoiDungId })" class="btn btn-warning btn-sm m-2">
                                         <i class="fas fa-edit"></i> Chỉnh Sửa
                                     </a>
-                                    <a href="@Url.Action("Delete", new { id = item.NguoiDungId })" class="btn btn-danger btn-sm" onclick="return confirm('Bạn có chắc chắn muốn xóa học viên này?');">
+                                    <a href="@Url.Action("Delete", new { id = item.NguoiDungId })" class="btn btn-danger btn-sm m-2" onclick="return confirm('Bạn có chắc chắn muốn xóa học viên này?');">
                                         <i class="fas fa-trash-alt"></i> Xóa
                                     </a>
                                 </td>
