--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Create.cshtml
@@ -56,10 +56,10 @@
 
                 <div class="row">
                     <div class="col-md-6 mb-3">
-                        @Html.LabelFor(model => model.TrangThai, "Trạng Thái Lớp Học", new { @class = "form-label" })
+                        @Html.LabelFor(m => m.TrangThai, "Trạng Thái", new { @class = "form-label" })
                         <span class="text-danger">*</span>
-                        @Html.DropDownListFor(model => model.TrangThai, new SelectList(Enum.GetValues(typeof(QuanLyThongTinDaoTao.Models.TrangThaiLopHoc))), new { @class = "form-control" })
-
+                        @Html.EnumDropDownListFor(m => m.TrangThai, new { @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.TrangThai, "", new { @class = "text-danger" })
                     </div>
 
 
@@ -82,12 +82,14 @@
 
                 <div class="col-md-6 mb-3">
                     @Html.Label("KhoaHocId", "Khóa Học", new { @class = "form-label" })
-                    <span class="text-danger">*</span>
                     <select class="form-control" name="KhoaHocId" required>
-                        <option value=""  class="text-center">-- Chọn Khóa Học --</option>
+                        <option value="">-- Chọn Khóa Học --</option>
                         @foreach (var khoaHoc in ViewBag.KhoaHocList)
                         {
-                            <option value="@khoaHoc.KhoaHocId"  class="text-center">@khoaHoc.TenKhoaHoc</option>
+                            <option value="@khoaHoc.KhoaHocId"
+                                    @(Model.KhoaHoc != null && Model.KhoaHoc.KhoaHocId == khoaHoc.KhoaHocId ? "selected" : "")>
+                                @khoaHoc.TenKhoaHoc
+                            </option>
                         }
                     </select>
                 </div>
