--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/GiangVien/Index.cshtml
@@ -44,9 +44,9 @@
                                 <td>@item.HocHam</td>
                                 <td>
                                     <!-- Các nút hành động đẹp hơn -->
-                                    <a href="@Url.Action("Details", new { id = item.NguoiDungId })" class="btn btn-info btn-sm m-2">
+                                    @*<a href="@Url.Action("Details", new { id = item.NguoiDungId })" class="btn btn-info btn-sm m-2">
                                         <i class="fas fa-eye"></i> Xem
-                                    </a>
+                                    </a>*@
                                     <a href="@Url.Action("Edit", new { id = item.NguoiDungId })" class="btn btn-warning btn-sm m-2">
                                         <i class="fas fa-edit"></i> Chỉnh Sửa
                                     </a>
