--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/HocVien/Index.cshtml
@@ -43,9 +43,9 @@
                                 <td>@item.SoDienThoai</td>
                                 <td>@item.CoQuanLamViec</td>
                                 <td>
-                                    <a href="@Url.Action("Details", new { id = item.NguoiDungId })" class="btn btn-info btn-sm m-2 ">
+                                    @*<a href="@Url.Action("Details", new { id = item.NguoiDungId })" class="btn btn-info btn-sm m-2 ">
                                         <i class="fas fa-eye"></i> Xem
-                                    </a>
+                                    </a>*@
                                     <a href="@Url.Action("Edit", new { id = item.NguoiDungId })" class="btn btn-warning btn-sm m-2">
                                         <i class="fas fa-edit"></i> Chỉnh Sửa
                                     </a>
