--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/Edit.cshtml
@@ -51,12 +51,12 @@
                 </div>
 
                 <div class="row">
-                    <div class="col-md-6 mb-3">
+                    @*<div class="col-md-6 mb-3">
                         @Html.LabelFor(m => m.TrangThai, "Trạng Thái", new { @class = "form-label" })
                         <span class="text-danger">*</span>
                         @Html.EnumDropDownListFor(m => m.TrangThai, new { @class = "form-control" })
                         @Html.ValidationMessageFor(m => m.TrangThai, "", new { @class = "text-danger" })
-                    </div>
+                    </div>*@
 
 
                     <div class="col-md-6 mb-3">
