--- a/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
+++ b/QuanLyThongTinDaoTao/Areas/Admin/Views/LopHoc/_LopHocTablePartial.cshtml
@@ -14,15 +14,33 @@
         <td>@lophoc.NgayKetThuc.ToString("dd/MM/yyyy")</td>
         <td>
             @{
-                var trangThaiText = lophoc.TrangThai;
+                string trangThaiText = "";
+                if (lophoc.TrangThai == LopHoc.TrangThaiLopHoc.SapMo)
+                {
+                    trangThaiText = "Sắp mở";
+                }
+                else if (lophoc.TrangThai == LopHoc.TrangThaiLopHoc.DaBatDau)
+                {
+                    trangThaiText = "Đã Bắt Đầu";
+                }
+                else if (lophoc.TrangThai == LopHoc.TrangThaiLopHoc.DaKetThuc)
+                {
+                    trangThaiText = "Kết thúc";
+                }
+                else
+                {
+                    trangThaiText = "Không xác định";
+                }
+
                 var badgeClass = lophoc.TrangThai == LopHoc.TrangThaiLopHoc.SapMo ? "bg-primary"
-                    : lophoc.TrangThai == LopHoc.TrangThaiLopHoc.DangHoc ? "bg-success"
+                    : lophoc.TrangThai == LopHoc.TrangThaiLopHoc.DaBatDau ? "bg-success"
                     : "bg-secondary";
             }
 
             <span class="badge @badgeClass">@trangThaiText</span>
-
         </td>
+
+
         <td>
             <a href="@Url.Action("Details", new { id = lophoc.LopHocId })" class="btn btn-info btn-sm m-2">
                 <i class="fas fa-eye"></i> Chi Tiết
@@ -37,3 +55,4 @@
     </tr>
     stt++;
 }
+
